--- a/project/pom.xml
+++ b/project/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>ci.jenkins.aws</groupId>
         <artifactId>proj3</artifactId>
-        <version>1.0-RAMA</version>
+        <version>soundv.1</version>
     </parent>
 
     <artifactId>project</artifactId>
